[gd_scene load_steps=29 format=3 uid="uid://de56lwhpalp6i"]

[ext_resource type="Script" path="res://Scripts/character_body_3d.gd" id="1_1qajl"]
[ext_resource type="PackedScene" uid="uid://ydcc2lt38ey4" path="res://Scenes/WaterGun.tscn" id="2_blk7k"]
[ext_resource type="Texture2D" uid="uid://c7b2idgqq0vib" path="res://Materials/Untitled design (5).png" id="3_35suu"]
[ext_resource type="Texture2D" uid="uid://fewyeo1ajtr" path="res://Models/LET’S GET RICH.png" id="3_wsqyl"]
[ext_resource type="PackedScene" uid="uid://w1wambbwlgkr" path="res://Scenes/Shovel.tscn" id="4_g8q2f"]
[ext_resource type="PackedScene" uid="uid://bgrdhxykn8ima" path="res://Scenes/interact_ray.tscn" id="5_aa38p"]
[ext_resource type="Script" path="res://popup_menu.gd" id="7_rbm22"]
[ext_resource type="Texture2D" uid="uid://bqdgpdgghwh82" path="res://Main Menu/Assets/Untitled design (32).png" id="8_rt7wg"]
[ext_resource type="Script" path="res://Scenes/button_3.gd" id="9_c7rxb"]
[ext_resource type="Texture2D" uid="uid://42oy8lsj66p" path="res://Main Menu/Assets/Untitled design (30).png" id="9_nlg4j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0l4ar"]
radius = 0.499585
height = 1.24402

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x68qc"]
height = 1.88505

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_14v3e"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dgk81"]
material = SubResource("StandardMaterial3D_14v3e")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x04fm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2li6r"]
bg_color = Color(0.776471, 0.0823529, 0.145098, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xckco"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i112l"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_jbjsr"]
resource_name = "Damage Red"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tiyy3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ke0o"]
_data = {
"Damage Red": SubResource("Animation_jbjsr"),
"RESET": SubResource("Animation_tiyy3")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_724cx"]
bg_color = Color(0.281779, 0.665975, 0.697433, 1)

[sub_resource type="SystemFont" id="SystemFont_o2ak2"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fdmj5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xqo57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tl155"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6w5xu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ujv5"]

[node name="player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0462, 0)
slide_on_ceiling = false
floor_max_angle = 1.0472
script = ExtResource("1_1qajl")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="." groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.377854, 0)
shape = SubResource("CapsuleShape3D_0l4ar")
disabled = true

[node name="standing_collision_shape" type="CollisionShape3D" parent="." groups=["Player"]]
shape = SubResource("CapsuleShape3D_x68qc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="standing_collision_shape"]
mesh = SubResource("CapsuleMesh_dgk81")

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera" type="Camera3D" parent="neck"]
current = true

[node name="TextureRect" type="TextureRect" parent="neck/Camera"]
light_mask = 0
z_index = -5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -131.0
offset_right = 125.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="UntitledDesign(5)" type="Sprite2D" parent="neck/Camera/TextureRect"]
position = Vector2(125, 92)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_35suu")

[node name="Healthbar" type="ProgressBar" parent="neck/Camera/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -558.0
offset_top = 280.0
offset_right = -213.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_x04fm")
theme_override_styles/fill = SubResource("StyleBoxFlat_2li6r")
value = 35.0
metadata/_edit_use_anchors_ = true

[node name="Damagebar" type="ProgressBar" parent="neck/Camera/TextureRect/Healthbar"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.5
offset_top = -13.5
offset_right = 172.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xckco")
theme_override_styles/fill = SubResource("StyleBoxFlat_i112l")
value = 45.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="DamageBarTimer" type="Timer" parent="neck/Camera/TextureRect/Healthbar"]
wait_time = 0.6
one_shot = true

[node name="Let’sGetRich" type="Sprite2D" parent="neck/Camera/TextureRect/Healthbar"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(574, -229)
texture = ExtResource("3_wsqyl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/Camera/TextureRect/Healthbar/Let’sGetRich"]
libraries = {
"": SubResource("AnimationLibrary_1ke0o")
}

[node name="Energybar" type="ProgressBar" parent="neck/Camera/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -558.0
offset_top = 245.0
offset_right = -213.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xckco")
theme_override_styles/fill = SubResource("StyleBoxFlat_724cx")
metadata/_edit_use_anchors_ = true

[node name="Watergun" parent="neck/Camera" instance=ExtResource("2_blk7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.310352, -0.27509, -0.306297)

[node name="Root Scene" parent="neck/Camera" instance=ExtResource("4_g8q2f")]
transform = Transform3D(2.18557e-08, -3.30012e-15, -0.5, -7.54979e-08, -0.5, 0, -0.5, 7.54979e-08, -2.18557e-08, 0.751554, 0.0359479, -0.502501)

[node name="InteractRay" parent="neck/Camera" instance=ExtResource("5_aa38p")]

[node name="head_clearance" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.233632, 0)
target_position = Vector3(0, 0.75, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0.988235, 0, 0, 1)

[node name="Regen Interval" type="Timer" parent="."]
one_shot = true

[node name="Regen" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Popup menu" type="Node2D" parent="."]
position = Vector2(471, 319)
script = ExtResource("7_rbm22")

[node name="UntitledDesign(32)" type="Sprite2D" parent="Popup menu"]
position = Vector2(105, 5)
scale = Vector2(0.501, 0.501)
texture = ExtResource("8_rt7wg")

[node name="Button" type="Button" parent="Popup menu"]
custom_minimum_size = Vector2(120, 32)
offset_left = -7.0
offset_top = -67.0
offset_right = 206.0
offset_bottom = 13.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.493545, 0.493546, 0.493546, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.44895, 1.30555e-06, 9.62615e-08, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_o2ak2")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_fdmj5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xqo57")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tl155")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6w5xu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ujv5")
text = "STORE"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Popup menu"]
custom_minimum_size = Vector2(120, 32)
offset_left = -17.0
offset_top = -132.0
offset_right = 226.0
offset_bottom = -52.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.493545, 0.493546, 0.493546, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.44895, 1.30555e-06, 9.62615e-08, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_o2ak2")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_fdmj5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xqo57")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tl155")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6w5xu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ujv5")
text = "SETTINGS"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Popup menu"]
custom_minimum_size = Vector2(120, 32)
offset_left = -17.0
offset_top = 12.0
offset_right = 226.0
offset_bottom = 92.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.493545, 0.493546, 0.493546, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.44895, 1.30555e-06, 9.62615e-08, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_o2ak2")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_fdmj5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xqo57")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tl155")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6w5xu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ujv5")
text = "QUIT"
flat = true
script = ExtResource("9_c7rxb")
metadata/_edit_use_anchors_ = true

[node name="UntitledDesign(23)" type="Sprite2D" parent="Popup menu"]
position = Vector2(222, -129)
rotation = 0.282289
scale = Vector2(0.0673276, 0.0696601)
texture = ExtResource("9_nlg4j")

[connection signal="timeout" from="neck/Camera/TextureRect/Healthbar/DamageBarTimer" to="." method="_on_damage_bar_timer_timeout"]
[connection signal="pressed" from="Popup menu/Button3" to="." method="_on_button_3_pressed"]
